<resources>
    <string name="app_name">Adele</string>

    //On boarding
    <string name="next">Skip</string>
    <string name="proceed">Proceed</string>
    
    //Registration
    <string name="authenticate">Authenticate</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="nik">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    //Home page
    <string name="home">Home</string>

    //Catalog page
    <string name="catalog">Catalog</string>

    //Basket page
    <string name="basket">Basket</string>

    //Profile page
    <string name="profile">Profile</string>
    <string name="color">Color:</string>
    <string name="see_more">see more</string>
    <string name="calendar">Calendar</string>
    <string name="buy">Buy</string>
    <string name="size">Size:</string>
    <string name="new_home">NEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEWNEW</string>
    <string name="t_thirds">T-Thirds</string>


</resources>